--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,6 @@
 
-include AUTHORS.rst
-
-include CONTRIBUTING.rst
-include HISTORY.rst
-include LICENSE
-include README.rst
+include LICENSE.md
+include README.md
 
 recursive-include tests *
 recursive-exclude * __pycache__
